--- a/public/asset-files/css/styles-ltr.css
+++ b/public/asset-files/css/styles-ltr.css
@@ -5841,3 +5841,28 @@ a.col-md-4.col-12.cat-item.aos-init.aos-animate h3 {
 .contact-form .btn-cancel:hover {
     background-color: #f5f5f5;
 }
+
+.search-icon svg {
+    height: 25px;
+    width: 35px;
+    fill: #d4a017;
+    margin-left: 12px;
+    position: absolute;
+    top: 6px;
+    right: 9px !important;
+    z-index: 999;
+    left: auto !important;
+
+}
+
+.search-icon form {
+    position: absolute;
+    top: 0;
+    right: 0 !important;
+    left: auto !important;
+    /* width: 0; */
+}
+.navbar .login-button {
+
+    display: block;
+}
